[package]
name = "rust_mnemonic"
version = "0.3.0"
authors = [ "Evan Cameron <cameron.evan@gmail.com>" ]
license = "MIT/Apache-2.0"
homepage = "https://github.com/leshow/rust_mnemonic/"
repository = "https://github.com/leshow/rust_mnemonic/"
readme = "README.md"

[[bin]]
name = "rmnemonic"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
rust-crypto = "0.2.36"
nom = "1.2.4"
rand = "0.3.14"
getopts = "*"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"